feat: add optional include_validator_indices
